# CodonTransformer2

./: Makefile  README.md  pyproject.toml  run_train_harness.py
scripts/: jsonl_to_wds.py
src/codon_transformer_2/: collators.py
