[tool.poetry]
name = "CodonTransformer2"
version = "2.0.0"
description = "CodonTransformer2."
authors = ["Guillaume Filion <guillaume.filion@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gui11aume/CodonTransformer2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "codon_transformer_2", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
torch = "^2.6.0"
lightning = "^2.5.1"
deepspeed = "^0.16.5"
transformers = "^4.49.0"
webdataset = "^0.2.111"
tqdm = "^4.66.5"

[tool.poetry.dev-dependencies]
ruff = "^0.9.6"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pre-commit = "^4.0.1"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
